--- a/Tools/tests-host/Makefile
+++ b/Tools/tests-host/Makefile
@@ -10,20 +10,23 @@ LIBS=-lm
 #_DEPS = test.h
 #DEPS = $(patsubst %,$(IDIR)/%,$(_DEPS))
 
-_OBJ = mixer_test.o test_mixer.o mixer_simple.o mixer_multirotor.o mixer.o mixer_group.o
+_OBJ = mixer_test.o test_mixer.o mixer_simple.o mixer_multirotor.o mixer.o mixer_group.o mixer_load.o
 OBJ = $(patsubst %,$(ODIR)/%,$(_OBJ))
 
 #$(DEPS)
 $(ODIR)/%.o: %.cpp
 	$(CC) -c -o $@ $< $(CFLAGS)
 
-$(ODIR)/%.o: ../../src/systemcmds/tests/%.c
+$(ODIR)/%.o: ../../src/systemcmds/tests/%.cpp
 	$(CC) -c -o $@ $< $(CFLAGS)
 
 $(ODIR)/%.o: ../../src/modules/systemlib/%.cpp
 	$(CC) -c -o $@ $< $(CFLAGS)
 
 $(ODIR)/%.o: ../../src/modules/systemlib/mixer/%.cpp
+	$(CC) -c -o $@ $< $(CFLAGS)
+
+$(ODIR)/%.o: ../../src/modules/systemlib/mixer/%.c
 	$(CC) -c -o $@ $< $(CFLAGS)
 
 #
