AlphaFilter: move from ecl -> mathlib

--- a/src/lib/ecl/test/CMakeLists.txt
+++ b/src/lib/ecl/test/CMakeLists.txt
@@ -1,6 +1,6 @@
 ############################################################################
 #
-#   Copyright (c) 2015 PX4 Development Team. All rights reserved.
+#   Copyright (c) 2019 ECL Development Team. All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions
@@ -12,7 +12,7 @@
 #    notice, this list of conditions and the following disclaimer in
 #    the documentation and/or other materials provided with the
 #    distribution.
-# 3. Neither the name PX4 nor the names of its contributors may be
+# 3. Neither the name ECL nor the names of its contributors may be
 #    used to endorse or promote products derived from this software
 #    without specific prior written permission.
 #
@@ -31,15 +31,33 @@
 #
 ############################################################################
 
-px4_add_library(mathlib
-	math/test/test.cpp
-	math/filter/LowPassFilter2p.hpp
-	math/filter/MedianFilter.hpp
-	math/filter/NotchFilter.hpp
-)
+include(gtest.cmake)
 
-px4_add_unit_gtest(SRC math/test/LowPassFilter2pVector3fTest.cpp LINKLIBS mathlib)
-px4_add_unit_gtest(SRC math/test/AlphaFilterTest.cpp)
-px4_add_unit_gtest(SRC math/test/MedianFilterTest.cpp)
-px4_add_unit_gtest(SRC math/test/NotchFilterTest.cpp)
-px4_add_unit_gtest(SRC math/FunctionsTest.cpp)
+add_subdirectory(sensor_simulator)
+add_subdirectory(test_helper)
+
+set(SRCS
+	main.cpp
+	test_EKF_basics.cpp
+	test_EKF_ringbuffer.cpp
+	test_EKF_measurementSampling.cpp
+	test_EKF_imuSampling.cpp
+	test_EKF_fusionLogic.cpp
+	test_EKF_initialization.cpp
+	test_EKF_gps_yaw.cpp
+	test_EKF_gps.cpp
+	test_EKF_externalVision.cpp
+	test_EKF_airspeed.cpp
+	test_EKF_withReplayData.cpp
+	test_EKF_flow.cpp
+	test_EKF_terrain_estimator.cpp
+	test_SensorRangeFinder.cpp
+	test_geo.cpp
+	test_geo_lookup.cpp
+	test_EKF_utils.cpp
+   )
+add_executable(ECL_GTESTS ${SRCS})
+
+target_link_libraries(ECL_GTESTS gtest_main ecl_EKF ecl_sensor_sim ecl_test_helper)
+
+add_test(NAME ECL_GTESTS COMMAND ECL_GTESTS)
